added image extractor

--- a/chromeExtension/manifest.json
+++ b/chromeExtension/manifest.json
@@ -16,8 +16,14 @@
     "48": "images/icon48.png",
     "128": "images/icon128.png"
   },
-  "permissions": ["activeTab", "scripting"],
+  "permissions": ["activeTab", "scripting", "tabs", "downloads"],
   "background": {
     "service_worker": "background.js"
-  }
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["images.html", "styles.css", "images.js"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
